--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="robots" content="All">
     <meta name="author" content="Udgiver">
     <meta name="copyright" content="Information om copyright">
+    <script src="https://kit.fontawesome.com/6e96c3bdd8.js" crossorigin="anonymous"></script>
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/styles.css" rel="stylesheet" type="text/css">
@@ -29,6 +30,36 @@
 <body>
 
 <!-- Her skal sidens indhold ligge -->
+<div class="container-fluid h-auto navbar-container"></div>
+<div class="navbar row p-3 bg-secondary"></div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="container-fluid mt-5">
+    <div class="row h-100 align-content-center bg-primary ">
+        <div class="col text-center">
+            fotter
+        </div>
+    </div>
+</div>
 </body>
 </html>
