--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
     <meta name="robots" content="All">
-    <meta name="author" content="Udgiver">
-    <meta name="copyright" content="Information om copyright">
+    <meta name="author" content="Amanda, Loay, Mikkel, Sophie">
+    <meta name="copyright" content="Skoleprojekt">
     <script src="https://kit.fontawesome.com/6e96c3bdd8.js" crossorigin="anonymous"></script>
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
