Hentet mmdgrid-skabelon + små ændringer som slettelse af alt unødigt indhold på Samsung siden.

--- a/samsung.html
+++ b/samsung.html
@@ -19,6 +19,11 @@
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
+    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+
+
+
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,8 +31,77 @@
 
 <!-- i <body> har man alt indhold på siden som brugeren kan se -->
 <body>
+<div class="container-fluid h-auto navbar-container">
+    <div class="navbar row p-3 bg-secondary">
 
-<!-- Her skal sidens indhold ligge -->
+        <div class="col-4"> Logo</div>
+
+        <div class="col-8 d-lg-none">
+            <div class="toggle d-flex justify-content-end">
+                <i class="fas fa-bars"></i>
+            </div>
+        </div>
+
+        <div class="nav col-12 col-lg-8">
+
+            <div class="row justify-content-end">
+                <div class="col-lg-auto p-3"><a href="#">Link</a></div>
+                <div class="col-lg-auto p-3"><a href="#">Link</a></div>
+                <div class="col-lg-auto p-3"><a href="#">Link</a></div>
+                <div class="col-lg-auto p-3"><a href="#">Link</a></div>
+                <div class="col-lg-auto p-3"><a href="#">Link</a></div>
+
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row h-100 align-items-center bg-primary">
+        <div class="col text-center">
+            <h1>Samsung</h1>
+            <p>Køb et lækkert cover til din Samsung telefon</p>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row text-secondary">
+        <div class="col text-center" div>
+            <div class="row gy-3 mt-3">
+                <div class="col-auto"><div class="image-small"></div></div>
+            </div>
+
+
+    </div>
+
+
+            <div class="row gy-3 mt-3">
+                <div class="col-auto"><div class="image-small"></div></div>
+            </div>
+        </div>
+    </div>
+
+<div class="container-fluid mt-5">
+    <div class="row h-100 align-items-center bg-primary">
+        <div class="col text-center">
+            @Miaw Vuf Kvæk
+        </div>
+    </div>
+</div>
+
+<script>
+    const toggle = document.querySelector('.toggle');
+    const nav = document.querySelector('.nav');
+    toggle.addEventListener('click', () => nav.classList.toggle('show'));
+
+</script>
+
+</body>
+</html>
+
 
 </body>
 </html>
