--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <script src="https://kit.fontawesome.com/6e96c3bdd8.js" crossorigin="anonymous"></script>
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-	<link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
+    <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
+    <link href="css/loay_styles.css" rel="stylesheet" type="text/css">
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
