--- a/iphone.html
+++ b/iphone.html
@@ -18,7 +18,8 @@
     <meta name="copyright" content="Skoleprojekt">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
+    <link href="css/mikkel_styles.css" rel="stylesheet" type="text/css">
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
