Slettede body indhold

--- a/kontakt.html
+++ b/kontakt.html
@@ -27,8 +27,22 @@
 
 <!-- i <body> har man alt indhold på siden som brugeren kan se -->
 <body>
-
 <!-- Her skal sidens indhold ligge -->
+
+<!--Div der indeholder hele vores grid og definerer sidens mål-->
+<div>
+    <!--Div der indeholder hele vores grid. Den er parent til alle "grid bokse"-->
+    <div>
+        <!--Topbar-->
+        <div>
+            <!--Billede-->
+            <div>
+
+            </div>
+        </div>
+    </div>
+</div>
+
 
 </body>
 </html>
