start på rows på Samsung side

--- a/samsung.html
+++ b/samsung.html
@@ -18,7 +18,7 @@
     <meta name="copyright" content="Information om copyright">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/sophie_styles.css" rel="stylesheet" type="text/css">
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
 
@@ -70,16 +70,15 @@
 <div class="container">
     <div class="row text-secondary">
         <div class="col text-center" div>
-            <div class="row gy-3 mt-3">
+            <div class="row row-cols-2 gy-3 mt-3">
+                <div class="col-auto"><div class="image-small"></div></div>
+                <div class="col-auto"><div class="image-small"></div></div>
+                <div class="col-auto"><div class="image-small"></div></div>
                 <div class="col-auto"><div class="image-small"></div></div>
             </div>
-
-
     </div>
-
-
             <div class="row gy-3 mt-3">
-                <div class="col-auto"><div class="image-small"></div></div>
+
             </div>
         </div>
     </div>
