Images til hjemmeside

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <meta name="copyright" content="Skoleprojekt">
     <script src="https://kit.fontawesome.com/6e96c3bdd8.js" crossorigin="anonymous"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
     <link href="css/loay_styles.css" rel="stylesheet" type="text/css">
