--- a/iphone.html
+++ b/iphone.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
 
     <!-- Titel som ses oppe i browserens tab mv. -->
-    <title>iPhone covers</title>
+    <title>iPhone Covers</title>
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
     <meta name="robots" content="All">
@@ -18,7 +18,6 @@
     <meta name="copyright" content="Skoleprojekt">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
-    <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
     <link href="css/mikkel_styles.css" rel="stylesheet" type="text/css">
 
     <!-- Sikrer den vises korrekt på mobil, tablet mv. ved at tage ift. skærmstørrelse - bliver brugt til responsive websider -->
@@ -26,9 +25,11 @@
 </head>
 
 <!-- i <body> har man alt indhold på siden som brugeren kan se -->
+
+
 <body>
 
-<!-- Her skal sidens indhold ligge -->
+
 
 </body>
 </html>
