--- a/samsung.html
+++ b/samsung.html
@@ -69,9 +69,11 @@
 
 <div class="container">
     <div class="row text-secondary">
-        <div class="col text-center" div>
+        <div class="col text-center"</div>
             <div class="row row-cols-2 gy-3 mt-3">
-                <div class="col-auto"><div class="image-small"></div></div>
+                <div class="col-auto"><div class="image-small">
+                    <img src="" alt="cover1" >
+                </div></div>
                 <div class="col-auto"><div class="image-small"></div></div>
                 <div class="col-auto"><div class="image-small"></div></div>
                 <div class="col-auto"><div class="image-small"></div></div>
