Bokse til de to header

--- a/samsung.html
+++ b/samsung.html
@@ -69,26 +69,37 @@
 
 <div class="container">
     <div class="row text-secondary">
-        <div class="col text-center"</div>
+        <div class="col text-center"></div>
             <div class="row row-cols-2 gy-3 mt-3">
                 <div class="col-auto"><div class="image-small">
-                    <img src="" alt="cover1" >
+                    <img src="Red_Cover" alt="red cover" >
                 </div></div>
-                <div class="col-auto"><div class="image-small"></div></div>
-                <div class="col-auto"><div class="image-small"></div></div>
-                <div class="col-auto"><div class="image-small"></div></div>
+
+                <div class="col-auto"><div class="image-small">
+                    <img src="img_Orange_Cover.jpg" alt="orange cover">
+                </div></div>
+
+                <div class="col-auto"><div class="image-small">
+                    <img src="img_Green_Cover.jpg" alt="green cover">
+                </div></div>
+
+                <div class="col-auto"><div class="image-small">
+                    <img src="Grey-Cover.jpg" alt="grey cover4">
+                </div></div>
             </div>
     </div>
-            <div class="row gy-3 mt-3">
 
-            </div>
-        </div>
     </div>
 
-<div class="container-fluid mt-5">
+<div class="container-fluid-2 mt-5">
+    <div class="row h-100 align-items-center bg-primary">
+        footer
+</div>
+
+<div class="container-fluid-3 mt-5">
     <div class="row h-100 align-items-center bg-primary">
         <div class="col text-center">
-            @Miaw Vuf Kvæk
+            footer 2
         </div>
     </div>
 </div>
