--- a/om.html
+++ b/om.html
@@ -25,14 +25,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<!-- i <body> har man alt indhold på siden som brugeren kan se -->
+
+
+<!--I <body> har man alt indhold på siden som brugeren kan se-->
 <body>
 
+<!--Div der indeholder hele sidens grid og definerer sidens mål-->
+<div>
 
+    <!--Div der indeholder hele sidens grid. Den er parent til alle "grid bokse"-->
+    <div>
 
+        <!--Topbar-->
+        <div></div>
 
+        <!--Footer-->
+        <div></div>
 
-
+    </div>
+</div>
 
 </body>
 </html>
