Ændringer af farver og placeringer

--- a/kontakt.html
+++ b/kontakt.html
@@ -40,17 +40,17 @@
         <div></div>
 
         <!--Farvet boks med teksten "Kontakt os"-->
-        <div>
+        <div class="container-fluid text-center bg-secondary">
             <p>Kontakt os</p>
         </div>
 
         <!--Telefonnummer og mail-->
-        <div>
+        <div class="container-fluid text-center bg-primary">
             <p>+45 55 55 55 55</p>
             <p>kontakt@oceancase.dk</p>
         </div>
 
-        <div>
+        <div class="container-fluid text-center bg-primary">
             <p>Har du spoørgsmål?</p>
             <form method="get" action="index.html">
                 <label for="navn">Navn</label>
