Forsøg på at få Cover-boksene til at være på 2 rækker

--- a/samsung.html
+++ b/samsung.html
@@ -71,20 +71,48 @@
     <div class="row text-secondary">
         <div class="col text-center"></div>
             <div class="row row-cols-2 gy-3 mt-3">
+
                 <div class="col-auto"><div class="image-small">
-                    <img src="Red_Cover" alt="red cover" >
+                    <div class="col-auto"><div class="image-small-small">
+                        <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover" >
+                        <h3>Samsung cover</h3>
+                        <p>"Hand in Hand</p>
+                        <h2>249,00</h2>
+                        <div class="col-auto"><div class="image-small-small-small">
+                            <p>Læg i kurv.</p>
+                    </div>
                 </div></div>
 
                 <div class="col-auto"><div class="image-small">
-                    <img src="img_Orange_Cover.jpg" alt="orange cover">
+                    <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
+                    <h3>Samsung cover</h3>
+                    <p>"Flower"</p>
+                    <h2>249,00</h2>
+
+                    <div class="col-auto"><div class="image-small-small-small">
+                        <p>Læg i kurv.</p>
                 </div></div>
 
                 <div class="col-auto"><div class="image-small">
-                    <img src="img_Green_Cover.jpg" alt="green cover">
+                    <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
+                    <h3>Samsung cover</h3>
+                    <p>"Earth"</p>
+                    <h2>249,00</h2>
+
+                    <div class="col-auto"><div class="image-small-small-small">
+                        <p>Læg i kurv.</p>
+
                 </div></div>
 
                 <div class="col-auto"><div class="image-small">
-                    <img src="Grey-Cover.jpg" alt="grey cover4">
+                    <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover4">
+                    <h3>Samsung cover</h3>
+                    <p>"Woman"</p>
+                    <h2>249,00</h2>
+
+                    <div class="col-auto"><div class="image-small-small">
+                        <p>Læg i kurv.</p>
+
                 </div></div>
             </div>
     </div>
