Slettet ændringer fra 1 commit + tilføjet a-tags til "læg i Kurv"

--- a/samsung.html
+++ b/samsung.html
@@ -73,14 +73,14 @@
             <div class="row row-cols-2 gy-3 mt-3">
 
                 <div class="col-auto"><div class="image-small">
+                    <img class="coverbillede1" src="images/Red_Cover.jpg." alt="red cover">
+                    <h3>Samsung cover</h3>
+                    <p>"Hand in Hand"</p>
+                    <h2>249,00</h2>
+
                     <div class="col-auto"><div class="image-small-small">
-                        <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover" >
-                        <h3>Samsung cover</h3>
-                        <p>"Hand in Hand</p>
-                        <h2>249,00</h2>
-                        <div class="col-auto"><div class="image-small-small-small">
-                            <p>Læg i kurv.</p>
-                    </div>
+                        <a href="#">Læg i Kurv</a>
+
                 </div></div>
 
                 <div class="col-auto"><div class="image-small">
@@ -89,8 +89,8 @@
                     <p>"Flower"</p>
                     <h2>249,00</h2>
 
-                    <div class="col-auto"><div class="image-small-small-small">
-                        <p>Læg i kurv.</p>
+                    <div class="col-auto"><div class="image-small-small">
+                        <a href="#">Læg i Kurv</a>
                 </div></div>
 
                 <div class="col-auto"><div class="image-small">
@@ -99,9 +99,8 @@
                     <p>"Earth"</p>
                     <h2>249,00</h2>
 
-                    <div class="col-auto"><div class="image-small-small-small">
-                        <p>Læg i kurv.</p>
-
+                    <div class="col-auto"><div class="image-small-small">
+                        <a href="#">Læg i Kurv</a>
                 </div></div>
 
                 <div class="col-auto"><div class="image-small">
@@ -111,8 +110,7 @@
                     <h2>249,00</h2>
 
                     <div class="col-auto"><div class="image-small-small">
-                        <p>Læg i kurv.</p>
-
+                        <a href="#">Læg i Kurv</a>
                 </div></div>
             </div>
     </div>
