A-tags til indkøbskurv

--- a/samsung.html
+++ b/samsung.html
@@ -79,7 +79,7 @@
                     <h2>249,00</h2>
 
                     <div class="col-auto"><div class="image-small-small">
-                        <a href="#">Læg i Kurv</a>
+                        <a href="indkoebskurv.html">Læg i Kurv</a>
 
                 </div></div>
 
@@ -90,7 +90,7 @@
                     <h2>249,00</h2>
 
                     <div class="col-auto"><div class="image-small-small">
-                        <a href="#">Læg i Kurv</a>
+                        <a href="indkoebskurv.html">Læg i Kurv</a>
                 </div></div>
 
                 <div class="col-auto"><div class="image-small">
@@ -100,7 +100,7 @@
                     <h2>249,00</h2>
 
                     <div class="col-auto"><div class="image-small-small">
-                        <a href="#">Læg i Kurv</a>
+                        <a href="indkoebskurv.html">Læg i Kurv</a>
                 </div></div>
 
                 <div class="col-auto"><div class="image-small">
@@ -110,7 +110,7 @@
                     <h2>249,00</h2>
 
                     <div class="col-auto"><div class="image-small-small">
-                        <a href="#">Læg i Kurv</a>
+                        <a href="indkoebskurv.html">Læg i Kurv</a>
                 </div></div>
             </div>
     </div>
