--- a/samsung.html
+++ b/samsung.html
@@ -70,47 +70,47 @@
 <div class="container">
     <div class="row text-secondary">
         <div class="col text-center"></div>
-            <div class="row row-cols-2 gy-3 mt-3">
+            <div class="row row cols-2 gy-3 mt-3">
 
-                <div class="col-auto"><div class="image-small">
+                <div><div class="image-small salgsbillede">
                     <img class="coverbillede1" src="images/Red_Cover.jpg." alt="red cover">
                     <h3>Samsung cover</h3>
                     <p>"Hand in Hand"</p>
                     <h2>249,00</h2>
 
-                    <div class="col-auto"><div class="image-small-small">
-                        <a href="indkoebskurv.html">Læg i Kurv</a>
+                    <div><div class="image-small-small">
+                        <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
 
                 </div></div>
 
-                <div class="col-auto"><div class="image-small">
+                <div><div class="image-small">
                     <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
                     <h3>Samsung cover</h3>
                     <p>"Flower"</p>
                     <h2>249,00</h2>
 
-                    <div class="col-auto"><div class="image-small-small">
-                        <a href="indkoebskurv.html">Læg i Kurv</a>
+                    <div><div class="image-small-small">
+                        <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
                 </div></div>
 
-                <div class="col-auto"><div class="image-small">
+                <div><div class="image-small">
                     <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
                     <h3>Samsung cover</h3>
                     <p>"Earth"</p>
                     <h2>249,00</h2>
 
-                    <div class="col-auto"><div class="image-small-small">
-                        <a href="indkoebskurv.html">Læg i Kurv</a>
+                    <div><div class="image-small-small">
+                        <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
                 </div></div>
 
-                <div class="col-auto"><div class="image-small">
+                <div class=" d-flex"><div class="image-small">
                     <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover4">
                     <h3>Samsung cover</h3>
                     <p>"Woman"</p>
                     <h2>249,00</h2>
 
-                    <div class="col-auto"><div class="image-small-small">
-                        <a href="indkoebskurv.html">Læg i Kurv</a>
+                    <div><div class="image-small">
+                        <a class="kurv" href="indkoebskurv.html">Læg i Kurv</a>
                 </div></div>
             </div>
     </div>
