--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
     <link href="css/loay_styles.css" rel="stylesheet" type="text/css">
@@ -57,7 +60,7 @@
         </div>
 
         <div class="col-8">
-            <h1 class="logo">Ocean Case</h1>
+            <h1 class="logo text-center">Ocean Case</h1>
         </div>
         <div class="col-2 d-flex justify-content-end d-lg-none align-items-center pa"><svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
             <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket" d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z" transform="translate(-1.5 -3.03)" fill="#fff"/>
@@ -79,6 +82,64 @@
         </div>
 
     </div>
+</div>
+
+
+
+
+<div class=" row h-100 image-medium ">
+    <img src="images/showcase.jpeg" alt="forside">
+
+</div>
+<br>
+
+
+<div class="container-fluid">
+    <div class="row h-100 align-content-center bg-primary ">
+        <div class="col text-center">
+            <h1 class="h11 p-4">Bæredygtige Covers</h1>
+            <p class="p11">Få god samvittighed ved at købe vores lækre covers lavet af genbrugsplast fra verdens have. Vi har coverstil enhver smag. Enkelt, bæredygtigt og super smart.
+
+            </p>
+        </div>
+    </div>
+</div>
+<div class="container-fluid colar p-3 mt-5">
+    <div class="p-3 d-flex flex-column">
+        <p>Mindre forbrug</p>
+        <h1>Større genbrug</h1>
+    <svg xmlns="http://www.w3.org/2000/svg" width="96" height="96" viewBox="0 0 96 96">
+        <circle id="Ellipse_4" data-name="Ellipse 4" cx="48" cy="48" r="48" fill="#fff"/>
+        <path id="Icon_awesome-recycle" data-name="Icon awesome-recycle" d="M19.916,28.262a1.728,1.728,0,0,1-2.6,1.853l-4.4-2.747L7.434,36.152a3.459,3.459,0,0,0,2.927,5.286h5.61a1.3,1.3,0,0,1,1.295,1.295V47.05a1.3,1.3,0,0,1-1.295,1.295h-5.6a10.366,10.366,0,0,1-8.785-15.85l5.484-8.783L2.677,20.966A1.728,1.728,0,0,1,3.2,17.819l11.9-2.746a1.727,1.727,0,0,1,2.071,1.294l2.747,11.9ZM30.552,8.524l4.456,7.13-4.4,2.747a1.728,1.728,0,0,0,.527,3.146l11.9,2.746A1.726,1.726,0,0,0,45.1,23l2.746-11.9a1.728,1.728,0,0,0-2.6-1.853L40.863,12,36.41,4.864a10.365,10.365,0,0,0-17.57,0L16.9,7.968a1.3,1.3,0,0,0,.412,1.784l3.66,2.287a1.3,1.3,0,0,0,1.784-.412l1.938-3.1A3.457,3.457,0,0,1,30.552,8.524ZM53.663,32.494l-2.969-4.755a1.3,1.3,0,0,0-1.785-.412L45.255,29.61a1.3,1.3,0,0,0-.412,1.784l2.974,4.76a3.459,3.459,0,0,1-2.928,5.283H34.532V36.261a1.728,1.728,0,0,0-2.947-1.221l-8.633,8.631a1.726,1.726,0,0,0,0,2.442l8.633,8.632a1.728,1.728,0,0,0,2.947-1.221V48.344H44.878A10.366,10.366,0,0,0,53.663,32.494Z" transform="translate(20.375 20.11)" fill="#afc6a9"/>
+    </svg></div>
+    <div class="p-3">
+        <p>Mindre</p>
+        <h1>Vandforbrug</h1>
+    <svg xmlns="http://www.w3.org/2000/svg" width="96" height="96" viewBox="0 0 96 96">
+        <circle id="Ellipse_5" data-name="Ellipse 5" cx="48" cy="48" r="48" fill="#fff"/>
+        <path id="Icon_awesome-water" data-name="Icon awesome-water" d="M53.927,35.189a11.081,11.081,0,0,1-5.555-2.2,3.72,3.72,0,0,0-4.624,0c-3.636,2.917-10.285,2.917-13.978-.144a3.56,3.56,0,0,0-4.48.173c-3.646,2.888-10.256,2.878-13.93-.163a3.617,3.617,0,0,0-4.519.192A10.878,10.878,0,0,1,1.3,35.2,1.49,1.49,0,0,0,0,36.705v3.089a1.514,1.514,0,0,0,1.6,1.535A17.242,17.242,0,0,0,9.22,38.845a18.4,18.4,0,0,0,18.42,0,18.4,18.4,0,0,0,18.42,0,17.736,17.736,0,0,0,7.589,2.475,1.514,1.514,0,0,0,1.6-1.535V36.753a1.54,1.54,0,0,0-1.324-1.564Zm0-13.815a11.081,11.081,0,0,1-5.555-2.2,3.72,3.72,0,0,0-4.624,0c-3.636,2.917-10.285,2.917-13.978-.144a3.56,3.56,0,0,0-4.48.173c-3.646,2.888-10.256,2.878-13.93-.163a3.617,3.617,0,0,0-4.519.192A10.878,10.878,0,0,1,1.3,21.384,1.49,1.49,0,0,0,0,22.89v3.089a1.514,1.514,0,0,0,1.6,1.535A17.242,17.242,0,0,0,9.22,25.029a18.4,18.4,0,0,0,18.42,0,18.4,18.4,0,0,0,18.42,0A17.736,17.736,0,0,0,53.648,27.5a1.514,1.514,0,0,0,1.6-1.535V22.938a1.54,1.54,0,0,0-1.324-1.564Zm0-13.815a11.168,11.168,0,0,1-5.555-2.2,3.72,3.72,0,0,0-4.624,0C40.112,8.279,33.463,8.279,29.77,5.218a3.56,3.56,0,0,0-4.48.173c-3.646,2.888-10.256,2.878-13.93-.163A3.617,3.617,0,0,0,6.84,5.42,10.878,10.878,0,0,1,1.3,7.569,1.49,1.49,0,0,0,0,9.075v3.089A1.514,1.514,0,0,0,1.6,13.7,17.242,17.242,0,0,0,9.22,11.214a18.4,18.4,0,0,0,18.42,0,18.4,18.4,0,0,0,18.42,0,17.736,17.736,0,0,0,7.589,2.475,1.514,1.514,0,0,0,1.6-1.535V9.123a1.54,1.54,0,0,0-1.324-1.564Z" transform="translate(20.375 25.081)" fill="#afc6a9"/>
+    </svg></div>
+    <div class="p-3 row d-flex">
+    <svg xmlns="http://www.w3.org/2000/svg" width="96" height="96" viewBox="0 0 96 96">
+        <circle id="Ellipse_6" data-name="Ellipse 6" cx="48" cy="48" r="48" fill="#fff"/>
+        <g id="Group_5" data-name="Group 5" transform="translate(-30 -979)">
+            <path id="Icon_awesome-fish" data-name="Icon awesome-fish" d="M17.7,6.75c-4.869,0-9.12,2.964-11.487,5.5L1.488,8.675a.9.9,0,0,0-1.469.793l1.308,5.94L.019,21.348a.9.9,0,0,0,1.469.793l4.726-3.574c2.366,2.535,6.619,5.5,11.487,5.5,7.439,0,13.469-6.927,13.469-8.658S25.139,6.75,17.7,6.75Zm4.731,9.957a1.3,1.3,0,1,1,1.3-1.3A1.3,1.3,0,0,1,22.432,16.707Z" transform="translate(62.415 989.778)" fill="#afc6a9"/>
+            <path id="Icon_awesome-fish-2" data-name="Icon awesome-fish" d="M17.7,6.75c-4.869,0-9.12,2.964-11.487,5.5L1.488,8.675a.9.9,0,0,0-1.469.793l1.308,5.94L.019,21.348a.9.9,0,0,0,1.469.793l4.726-3.574c2.366,2.535,6.619,5.5,11.487,5.5,7.439,0,13.469-6.927,13.469-8.658S25.139,6.75,17.7,6.75Zm4.731,9.957a1.3,1.3,0,1,1,1.3-1.3A1.3,1.3,0,0,1,22.432,16.707Z" transform="translate(63.584 1033.935)" fill="#afc6a9"/>
+            <path id="Icon_awesome-fish-3" data-name="Icon awesome-fish" d="M17.7,6.75c-4.869,0-9.12,2.964-11.487,5.5L1.488,8.675a.9.9,0,0,0-1.469.793l1.308,5.94L.019,21.348a.9.9,0,0,0,1.469.793l4.726-3.574c2.366,2.535,6.619,5.5,11.487,5.5,7.439,0,13.469-6.927,13.469-8.658S25.139,6.75,17.7,6.75Zm4.731,9.957a1.3,1.3,0,1,1,1.3-1.3A1.3,1.3,0,0,1,22.432,16.707Z" transform="translate(45.661 1011.856)" fill="#afc6a9"/>
+            <path id="Icon_awesome-fish-4" data-name="Icon awesome-fish" d="M17.7,6.75c-4.869,0-9.12,2.964-11.487,5.5L1.488,8.675a.9.9,0,0,0-1.469.793l1.308,5.94L.019,21.348a.9.9,0,0,0,1.469.793l4.726-3.574c2.366,2.535,6.619,5.5,11.487,5.5,7.439,0,13.469-6.927,13.469-8.658S25.139,6.75,17.7,6.75Zm4.731,9.957a1.3,1.3,0,1,1,1.3-1.3A1.3,1.3,0,0,1,22.432,16.707Z" transform="translate(79.169 1011.856)" fill="#afc6a9"/>
+        </g>
+    </svg>
+        <p>Mindre</p>
+        <h1>Forurening</h1>
+
+
+    </div>
+
+
+</div>
+<div>
+
+</div>
 
 
 
@@ -109,8 +170,8 @@
 
 </script>
 
+    
 
 
-</div>
 </body>
 </html>
