--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&display=swap" rel="stylesheet">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
@@ -137,8 +141,44 @@
 
 
 </div>
-<div>
+<div class="image-large h-auto ny align-items-center ">
+<h2 class="text-center pt-2 text">Nyhedsbrev</h2>
+    <div class="justify-content-center d-flex">
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="87.372" height="72.506" viewBox="0 0 87.372 72.506">
+        <defs>
+            <filter id="Icon_ionic-md-mail" x="0" y="0" width="87.372" height="72.506" filterUnits="userSpaceOnUse">
+                <feOffset dy="3" input="SourceAlpha"/>
+                <feGaussianBlur stdDeviation="3" result="blur"/>
+                <feFlood flood-opacity="0.404"/>
+                <feComposite operator="in" in2="blur"/>
+                <feComposite in="SourceGraphic"/>
+            </filter>
+        </defs>
+        <g transform="matrix(1, 0, 0, 1, 0, 0)" filter="url(#Icon_ionic-md-mail)">
+            <path id="Icon_ionic-md-mail-2" data-name="Icon ionic-md-mail" d="M65.015,5.625H8.857A6.626,6.626,0,0,0,2.25,12.232V53.524a6.626,6.626,0,0,0,6.607,6.607H65.015a6.626,6.626,0,0,0,6.607-6.607V12.232A6.626,6.626,0,0,0,65.015,5.625Zm-.826,14.04L36.936,37.833,9.683,19.665V13.058L36.936,31.226,64.189,13.058Z" transform="translate(6.75 0.38)" fill="#fff"/>
+        </g>
+    </svg></div>
+    <p class="text-center text2">Tilmeld dig vores nyhedsbrev og få
+        super lækre fordele og løbende nye
+        opdateringer. </p>
 
+    <div class="p-1 text-center">
+        <div>
+            <label for="mail"></label>
+            <input class="text-center p-2 input" id="mail" name="Email" type="Email" placeholder="Email">
+
+        </div>
+        <div class="p-3">
+        <a  href="tilmedle.html" target="_blank" class="btn1">
+            Tilmeld
+        </a>
+        </div>
+    </div>
+
+
+</div>
+<div>
+    <img src="images/Recycle_Badge.jpeg" alt="recycle">
 </div>
 
 
