--- a/kontakt.html
+++ b/kontakt.html
@@ -94,40 +94,83 @@
             </div>
         </div>
 
+
         <!--Farvet boks med teksten "Kontakt os"-->
         <div class="container-fluid bg-secondary">
-            <div class="text-center sans_serif_font">
-                <p>Kontakt os</p>
+            <div class="kontakt_os text-center sans_serif_font text-secondary">
+                <h1>Kontakt os</h1>
             </div>
         </div>
 
+
         <!--Telefonnummer og mail-->
-        <div class="container-fluid text-center bg-primary sans_serif_font">
-            <p>+45 55 55 55 55</p>
-            <p>kontakt@oceancase.dk</p>
+        <div class="container-fluid sans_serif_font text-primary">
+
+            <div class="tlf_mail tlf">
+                <svg xmlns="http://www.w3.org/2000/svg" width="31.5" height="31.5" viewBox="0 0 31.5 31.5">
+                    <path id="Icon_awesome-phone-square-alt" data-name="Icon awesome-phone-square-alt" d="M28.125,2.25H3.375A3.375,3.375,0,0,0,0,5.625v24.75A3.375,3.375,0,0,0,3.375,33.75h24.75A3.375,3.375,0,0,0,31.5,30.375V5.625A3.375,3.375,0,0,0,28.125,2.25ZM26.973,23.862l-1.055,4.57a1.055,1.055,0,0,1-1.027.818A20.392,20.392,0,0,1,4.5,8.859a1.1,1.1,0,0,1,.818-1.027l4.57-1.055a1.282,1.282,0,0,1,.237-.027,1.144,1.144,0,0,1,.97.639L13.2,12.311a1.259,1.259,0,0,1,.085.416,1.2,1.2,0,0,1-.387.816l-2.664,2.18a16.306,16.306,0,0,0,7.789,7.789l2.18-2.664a1.2,1.2,0,0,1,.816-.387,1.255,1.255,0,0,1,.416.085l4.922,2.109a1.143,1.143,0,0,1,.639.97,1.224,1.224,0,0,1-.027.237Z" transform="translate(0 -2.25)"/>
+                </svg>
+                <h3>+45 55 55 55 55</h3>
+            </div>
+
+            <div class="tlf_mail mail">
+                <svg xmlns="http://www.w3.org/2000/svg" width="31.5" height="28.671" viewBox="0 0 31.5 28.671">
+                    <path id="Icon_ionic-md-mail" data-name="Icon ionic-md-mail" d="M30.75,5.625H5.25a3.274,3.274,0,0,0-3,3.475v21.72a3.274,3.274,0,0,0,3,3.475h25.5a3.274,3.274,0,0,0,3-3.475V9.1A3.274,3.274,0,0,0,30.75,5.625Zm-.375,7.385L18,22.567,5.625,13.01V9.535L18,19.092,30.375,9.535Z" transform="translate(-2.25 -5.625)"/>
+                </svg>
+                <h3>kontakt@oceancase.dk</h3>
+            </div>
+
         </div>
 
-        <div class="container-fluid text-center bg-primary sans_serif_font">
-            <p>Har du spoørgsmål?</p>
+
+        <!--Spørgsmålskasser-->
+        <div class="container-fluid text-center sans_serif_font text-primary">
+
+            <div class="har_du_spoergsmaal">
+                <!--Overskrift-->
+                <h2>Har du spørgsmål?</h2>
+            </div>
+
+            <!--Form som bruges til at få oplysninger fra brugeren. Denne info sendes så til back-end via URL-->
             <form method="get" action="index.html">
-                <label for="navn">Navn</label>
-                <input id="navn" name="navn" type="text" value="">
+
+                <!--Navn-->
+                <div>
+                    <label for="navn">Navn</label>
+                </div>
+                <div>
+                    <input class="tekst_boks" id="navn" name="navn" type="text" value="">
+                </div>
 
                 <br>
 
-                <label for="email">Email</label>
-                <input name="name" type="email" id="email" value="">
+                <!--E-mail-->
+                <div>
+                    <label for="email">Email</label>
+                </div>
+                <div>
+                    <input class="tekst_boks" name="name" type="email" id="email" value="">
+                </div>
 
                 <br>
 
-                <label for="besked">Besked</label>
-                <textarea id="besked" name="beskrivelse" ></textarea>
+                <!--Besked-->
+                <div>
+                    <label for="besked">Besked</label>
+                </div>
+                <div>
+                    <textarea class="tekst_boks" id="besked" name="beskrivelse"></textarea>
+                </div>
 
                 <br>
 
-                <input type="submit" value="Send formular">
+                <!--Send knap-->
+                <div class="send_knap">
+                    <input class="send_tekst" type="submit" value="Send">
+                </div>
             </form>
         </div>
+
 
         <!--Footer-->
         <div></div>
