--- a/samsung.html
+++ b/samsung.html
@@ -72,6 +72,7 @@
 
     </div>
 
+
 <div class="container-fluid">
     <div class="row h-100 align-items-center bg-primary">
         <div class="col text-center">
@@ -80,6 +81,40 @@
         </div>
     </div>
 </div>
+
+    <div class="row gy-3">
+        <div class="row gy-3 mt-3">
+            <div class="col-auto"><div class="image-small redcover">
+                <img class="coverbillede1" src="images/Red_Cover.jpg." alt="red cover">
+            </div></div>
+
+            <div class="col-auto"><div class="image-small orangecover">
+                <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
+            </div></div>
+
+            <div class="col-auto"><div class="image-small greencover">
+                <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
+            </div></div>
+
+            <div class="col-auto"><div class="image-small greycover">
+                <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover4">
+            </div></div>
+        </div>
+
+        <div class="col-md-6">
+            <h3>Miaw</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis distinctio quis sint! Animi dolorum eum illum libero nulla, porro praesentium. At consequatur deserunt dolor dolorem, fugiat tempore tenetur velit vero?</p>
+            <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis distinctio quis sint! Animi dolorum eum illum libero nulla, porro praesentium. At consequatur deserunt dolor dolorem, fugiat tempore tenetur velit vero?</p>
+        </div>
+        <div class="col-md-6">
+
+        </div>
+    </div>
+
+
+
+
+
 
 <div class="container">
     <div class="row text-secondary">
