--- a/samsung.html
+++ b/samsung.html
@@ -86,29 +86,35 @@
         <div class="row gy-3 mt-3">
             <div class="col-auto"><div class="image-small redcover">
                 <img class="coverbillede1" src="images/Red_Cover.jpg." alt="red cover">
+                <h3>Samsung cover</h3>
+                <p>"Hand in Hand"</p>
+                <h2>249,00</h2>
+
+
             </div></div>
 
             <div class="col-auto"><div class="image-small orangecover">
                 <img class="coverbillede2" src="images/Orange_Cover.jpg" alt="orange cover">
+                <h3>Samsung cover</h3>
+                <p>"Flower"</p>
+                <h2>249,00</h2>
             </div></div>
 
             <div class="col-auto"><div class="image-small greencover">
                 <img class="coverbillede3" src="images/Green_Cover.jpg" alt="green cover">
+                <h3>Samsung cover</h3>
+                <p>"Earth"</p>
+                <h2>249,00</h2>
             </div></div>
 
             <div class="col-auto"><div class="image-small greycover">
                 <img class="coverbillede4" src="images/Grey_Cover.jpg" alt="grey cover4">
+                <h3>Samsung cover</h3>
+                <p>"Woman"</p>
+                <h2>249,00</h2>
             </div></div>
         </div>
 
-        <div class="col-md-6">
-            <h3>Miaw</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis distinctio quis sint! Animi dolorum eum illum libero nulla, porro praesentium. At consequatur deserunt dolor dolorem, fugiat tempore tenetur velit vero?</p>
-            <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis distinctio quis sint! Animi dolorum eum illum libero nulla, porro praesentium. At consequatur deserunt dolor dolorem, fugiat tempore tenetur velit vero?</p>
-        </div>
-        <div class="col-md-6">
-
-        </div>
     </div>
 
 
