--- a/samsung.html
+++ b/samsung.html
@@ -20,8 +20,6 @@
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/sophie_styles.css" rel="stylesheet" type="text/css">
     <link href="css/mmdgrid.css" rel="stylesheet" type="text/css">
-    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
-
 
 
 
@@ -85,7 +83,7 @@
     <div class="row gy-3">
         <div class="row gy-3 mt-3">
             <div class="col-auto"><div class="image-small redcover">
-                <img class="coverbillede1" src="images/Red_Cover.jpg." alt="red cover">
+                <img class="coverbillede1" src="images/Red_Cover.jpg" alt="red cover">
                 <h3>Samsung cover</h3>
                 <p>"Hand in Hand"</p>
                 <h2>249,00</h2>
@@ -149,5 +147,3 @@
 </html>
 
 
-</body>
-</html>
