--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-!-- Instruktion til webbrowser om at vi kører HTML5 -->
+<!-- Instruktion til webbrowser om at vi kører HTML5 -->
 <!DOCTYPE html>
 
 <!-- html starter og slutter hele dokumentet / lang=da: Fortæller siden er på dansk -->
