--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </div>
 
 <div class="container-fluid p-0">
-    <div class="row h-100 image-medium ">
+    <div class=" h-100 image-medium ">
         <img src="images/showcase.jpeg" alt="forside">
 
     </div>
