--- a/samsung.html
+++ b/samsung.html
@@ -14,8 +14,28 @@
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
     <meta name="robots" content="All">
-    <meta name="author" content="Udgiver">
-    <meta name="copyright" content="Information om copyright">
+    <meta name="author" content="Amanda, Loay, Mikkel, Sophie">
+    <meta name="copyright" content="Skoleprojekt">
+    <script src="https://kit.fontawesome.com/6e96c3bdd8.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&family=Sacramento&display=swap"
+          rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&family=Pacifico&display=swap"
+          rel="stylesheet">
 
     <!-- Sikrer man kan benytte CSS ved at tilkoble en CSS fil -->
     <link href="css/sophie_styles.css" rel="stylesheet" type="text/css">
@@ -33,25 +53,32 @@
 <div class="container-fluid h-auto navbar-container cole">
     <div class="navbar row p-3">
 
-        <div class="col-2 d-flex">
+        <div class="col-2 d-flex d-lg-none">
             <div class="toggle d-flex align-items-center pa">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="21" viewBox="0 0 30 21">
                     <g id="Icon_feather-menu" data-name="Icon feather-menu" transform="translate(-3 -7.5)">
-                        <path id="Path_1" data-name="Path 1" d="M4.5,18h27" fill="none" stroke="#fbfbfd" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                        <path id="Path_2" data-name="Path 2" d="M4.5,9h27" fill="none" stroke="#fbfbfd" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
-                        <path id="Path_3" data-name="Path 3" d="M4.5,27h27" fill="none" stroke="#fbfbfd" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                        <path id="Path_1" data-name="Path 1" d="M4.5,18h27" fill="none" stroke="#fbfbfd"
+                              stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                        <path id="Path_2" data-name="Path 2" d="M4.5,9h27" fill="none" stroke="#fbfbfd"
+                              stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+                        <path id="Path_3" data-name="Path 3" d="M4.5,27h27" fill="none" stroke="#fbfbfd"
+                              stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
                     </g>
                 </svg>
 
             </div>
         </div>
 
-        <div class="col-8">
+        <div class="col-8 col-lg-4 text-center">
             <h1 class="logo">Ocean Case</h1>
         </div>
-        <div class="col-2 d-flex justify-content-end d-lg-none align-items-center pa"><svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
-            <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket" d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z" transform="translate(-1.5 -3.03)" fill="#fff"/>
-        </svg><a href="indkoebskurv.html"></a> </div>
+        <div class="col-2 d-flex justify-content-end d-lg-none align-items-center pa">
+
+            <a href="indkoebskurv.html" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
+                <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket"
+                      d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z"
+                      transform="translate(-1.5 -3.03)" fill="#fff"/>
+            </svg></a></div>
 
 
         <div class="nav col-12 col-lg-8">
@@ -61,15 +88,18 @@
                 <div class="col-lg-auto p-3 text-start a1"><a href="kontakt.html">Kontak os</a></div>
                 <div class="col-lg-auto p-3 text-start a1"><a href="om.html">Om os</a></div>
                 <div class="col-lg-auto p-3 text-start a1"><a href="login.html">Login</a></div>
-            </div>
-            <div class="col-lg-auto p3 text-center"><svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
-                <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket" d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z" transform="translate(-1.5 -3.03)" fill="#fff"/>
-            </svg>
+                <div class="col-lg-auto p-3 text-start a1 d-none"><a href="indkoebskurv.html" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
+                        <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket"
+                              d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z"
+                              transform="translate(-1.5 -3.03)" fill="#fff"/>
+                    </svg>
+                </a></div>
             </div>
         </div>
 
     </div>
-
+</div>
 
 <div class="container-fluid">
     <div class="row h-100 align-items-center bg-primary">
