--- a/samsung.html
+++ b/samsung.html
@@ -83,11 +83,11 @@
 
         <div class="nav col-12 col-lg-8">
             <div class="row justify-content-end">
-                <div class="col-lg-auto p-3 text-start a1"><a href="index.html">Forside</a></div>
-                <div class="col-lg-auto p-3 text-start a1"><a href="mellemside.html">Shop</a></div>
-                <div class="col-lg-auto p-3 text-start a1"><a href="kontakt.html">Kontak os</a></div>
-                <div class="col-lg-auto p-3 text-start a1"><a href="om.html">Om os</a></div>
-                <div class="col-lg-auto p-3 text-start a1"><a href="login.html">Login</a></div>
+                <div class="col-lg-auto p-3 text-start a1"><a class="nava" href="index.html">Forside</a></div>
+                <div class="col-lg-auto p-3 text-start a1"><a class="nava" href="mellemside.html">Shop</a></div>
+                <div class="col-lg-auto p-3 text-start a1"><a class="nava" href="kontakt.html">Kontak os</a></div>
+                <div class="col-lg-auto p-3 text-start a1"><a class="nava" href="om.html">Om os</a></div>
+                <div class="col-lg-auto p-3 text-start a1"><a class="nava" href="login.html">Login</a></div>
                 <div class="col-lg-auto p-3 text-start a1 d-none"><a href="indkoebskurv.html" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
                         <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket"
