--- a/mellemside.html
+++ b/mellemside.html
@@ -99,12 +99,12 @@
     </div>
 </div>
 
-<div class="image-large iphon">
-    <div class="text-center align-content-end">
+<div class="image-large iphon d-flex justify-content-center align-items-end">
+    <div class="text-center mb-5">
 <a href="iphone.html" target="_blank" class="btn2">iPhone</a></div>
 </div>
-<div class="image-large samsung">
-    <div class="text-center">
+<div class="image-large samsung d-flex justify-content-center align-items-end">
+    <div class="text-center mb-5">
 <a href="samsung.html" target="_blank" class="btn2">Samsung</a></div>
 </div>
 
