--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="col-lg-auto p-3 text-start a1"><a href="kontakt.html">Kontak os</a></div>
                 <div class="col-lg-auto p-3 text-start a1"><a href="om.html">Om os</a></div>
                 <div class="col-lg-auto p-3 text-start a1"><a href="login.html">Login</a></div>
-                <div class="col-lg-auto p-3 text-start a1 d-none"><a href="indkoebskurv.html" target="_blank">
+                <div class="col-lg-auto p-3 text-start a1 d-none d-lg-block"><a href="indkoebskurv.html" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="29.956" height="25.844" viewBox="0 0 29.956 25.844">
                         <path id="Icon_material-shopping-basket" data-name="Icon material-shopping-basket"
                               d="M23.572,12.534,17.608,3.6a1.352,1.352,0,0,0-1.13-.572,1.331,1.331,0,0,0-1.13.586L9.384,12.534H2.862A1.366,1.366,0,0,0,1.5,13.9a1.147,1.147,0,0,0,.054.368L5.013,26.886a2.708,2.708,0,0,0,2.614,1.988h17.7a2.736,2.736,0,0,0,2.628-1.988l3.459-12.622.041-.368a1.366,1.366,0,0,0-1.362-1.362Zm-11.179,0,4.085-5.991,4.085,5.991Zm4.085,10.893A2.723,2.723,0,1,1,19.2,20.7,2.731,2.731,0,0,1,16.478,23.427Z"
@@ -215,7 +215,7 @@
         super lækre fordele og løbende nye
         opdateringer. </p>
 
-    <div class="p-1 text-center">
+    <div class="p-5 text-center">
         <div>
             <label for="mail"></label>
             <input class="text-center p-2 input w-100 " id="mail" name="Email" type="Email" placeholder="Email">
