--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </div>
 
 <div class="container-fluid p-0 ">
-    <div class=" h-100 image-medium row ">
+    <div class=" image-medium row ">
         <img src="images/showcase.jpeg" alt="forside">
 
     </div>
